Room fixes
